add: resources on database fundamentals in java

--- a/1.IntroToDatabasesInJava.md
+++ b/1.IntroToDatabasesInJava.md
@@ -1,3 +1,5 @@
+![Metropolitan University Logo](https://umt.edu.al/wp-content/uploads/2022/10/Metropolitani-e1716457962400-300x88.jpg)  
+
 ### **Working with Databases in Java Using Eclipse and MySQL**  
 
 This tutorial is designed for beginners to learn how to work with databases in Java using Eclipse. By the end of this guide, you will be able to:  
